[workspace]
resolver = "2"
members = [
    "bin/mev",
    "mev-boost-rs",
    "mev-relay-rs",
    "mev-build-rs",
    "mev-rs",
]
default-members = ["bin/mev"]

[workspace.dependencies]
ethereum-consensus = { git = "https://github.com/pawanjay176/ethereum-consensus", branch = "main" }
beacon-api-client = { git = "https://github.com/pawanjay176/beacon-api-client", branch = "main" }
ssz_rs = "0.9.0"
